--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 <link href="wavesurferstyle.css" rel="stylesheet">
-<script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.4.0/wavesurfer.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.4.0/wavesurfer.min.js"></script>
+<script src="jukebox.js"></script>
+
 
 <title> JUKEBOX TRIAL 1 </title>
 
@@ -18,6 +20,20 @@
   JUKEBOX TRIAL 1
 
 <div id="waveform"></div>
+
+
+                <div class="controls">
+                    <button id="playBtn" class="btn btn-primary">Play / Pause</button>
+                    <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
+                    <button id="setMuteOnBtn" class="btn btn-primary">
+                        Mute <i class="glyphicon glyphicon-volume-off"></i>
+                    </button>
+
+                    <button id="setMuteOffBtn" class="btn btn-primary">
+                        Unmute <i class="glyphicon glyphicon-volume-up"></i>
+                    </button>
+                </div>
+
 
 </body>
 
