--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 
 
                 <div class="controls">
-                    <button id="playBtn" class="btn btn-primary">Play / Pause</button>
-                    <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
-                    <button id="setMuteOnBtn" class="btn btn-primary">
+                    <button id="playBtn" class="btn btn-primary">PLAY / PAUSE</button>
+                    <button id="toggleMuteBtn" class="btn btn-primary">MUTE / UNMUTE</button>
+                    <!--<button id="setMuteOnBtn" class="btn btn-primary">
                         Mute <i class="glyphicon glyphicon-volume-off"></i>
                     </button>
-
                     <button id="setMuteOffBtn" class="btn btn-primary">
                         Unmute <i class="glyphicon glyphicon-volume-up"></i>
-                    </button>
+                    </button>-->
                 </div>
+
+
 
 
 </body>
