Deletes random t floating near the player controls.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="controls">
     <button id="playBtn" class="btn btn-primary">Play / Pause</button>
     <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
-t</div>
+</div>
 
 <script>
 L.mapbox.accessToken = 'pk.eyJ1Ijoibm9yYWJlbmVkaWN0IiwiYSI6ImNpdXllbjdkbzA0aHYyeWwxd3BoaDdrYzgifQ.F94DF9486D8vAprIkZSOnQ';
