Fixed map; Adds placeholder text.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <meta charset="utf-8">
 <title> JUKEBOX TRIAL 1 </title>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-<link href="wavesurferstyle.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.4.0/wavesurfer.min.js"></script>
 <script src='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.js'></script>
 <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
 <script src='//api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 <link href='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.css' rel='stylesheet' />
-
-<style>
-#map {
-    height: 40vh;
-    min-height: 300px;
-}
-</style>
+<link href="wavesurferstyle.css" rel="stylesheet">
 
 <header role="banner">
     Jukebox Trial
@@ -24,6 +17,29 @@
 <div id="map">
   <div id="info"></div>
 </div>
+
+<article>
+    <p>Lorem ipsum dolor sit amet, id nam erat autem illud, id nusquam dissentias pro. Quo id aliquid epicuri. Ex ferri harum partem pro. Eirmod lucilius dissentiet ut sed, sea persecuti pertinacia ne. Latine eligendi at sit. No mutat rebum mei, unum facete indoctum eos ex. Ea nec singulis repudiandae.</p>
+
+<p>In feugiat inciderint mediocritatem pri. Has ad meis indoctum persequeris. At alia malis ancillae duo. Cum ei dignissim persequeris, id illum similique incorrupte quo, ex option cotidieque vel. Cu vim sale delicatissimi.</p>
+
+<p>His et minim decore postulant. Eam te aperiam vulputate, an facer maiorum ponderum usu, ad adhuc ridens mea. In quo choro iriure lobortis. Vix erant doctus constituto ne. Eu usu stet abhorreant, at vim sint vitae dictas. Vim vidisse fabellas gloriatur ut.</p>
+
+<p>Ut pri diam nemore vivendo, has mazim consul cu. Ius amet simul te. Docendi blandit disputando pri eu, vis possim regione ea, his ne elitr similique intellegebat. Duo eros iriure nusquam cu, tale dolores fabellas sed ea. Vix alterum interesset ea, modo facete duo ex.</p>
+
+<p>Usu an dolor comprehensam. At pro primis nominati, qui officiis repudiare posidonium cu, eu postea veritus pro. Cu usu lorem possit petentium, dolorem vulputate nec ne, eos autem malorum cu. Mazim suscipiantur necessitatibus nec no, commodo noluisse id mel. Id mea habeo epicurei, ut ius adhuc mundi mnesarchum. Ne vel nihil homero everti, aperiam definitionem ut duo, his te tota volutpat neglegentur. Prodesset gloriatur tincidunt pri ea, qui aeque tempor accusam ut.</p>
+
+    <p>Lorem ipsum dolor sit amet, id nam erat autem illud, id nusquam dissentias pro. Quo id aliquid epicuri. Ex ferri harum partem pro. Eirmod lucilius dissentiet ut sed, sea persecuti pertinacia ne. Latine eligendi at sit. No mutat rebum mei, unum facete indoctum eos ex. Ea nec singulis repudiandae.</p>
+
+<p>In feugiat inciderint mediocritatem pri. Has ad meis indoctum persequeris. At alia malis ancillae duo. Cum ei dignissim persequeris, id illum similique incorrupte quo, ex option cotidieque vel. Cu vim sale delicatissimi.</p>
+
+<p>His et minim decore postulant. Eam te aperiam vulputate, an facer maiorum ponderum usu, ad adhuc ridens mea. In quo choro iriure lobortis. Vix erant doctus constituto ne. Eu usu stet abhorreant, at vim sint vitae dictas. Vim vidisse fabellas gloriatur ut.</p>
+
+<p>Ut pri diam nemore vivendo, has mazim consul cu. Ius amet simul te. Docendi blandit disputando pri eu, vis possim regione ea, his ne elitr similique intellegebat. Duo eros iriure nusquam cu, tale dolores fabellas sed ea. Vix alterum interesset ea, modo facete duo ex.</p>
+
+<p>Usu an dolor comprehensam. At pro primis nominati, qui officiis repudiare posidonium cu, eu postea veritus pro. Cu usu lorem possit petentium, dolorem vulputate nec ne, eos autem malorum cu. Mazim suscipiantur necessitatibus nec no, commodo noluisse id mel. Id mea habeo epicurei, ut ius adhuc mundi mnesarchum. Ne vel nihil homero everti, aperiam definitionem ut duo, his te tota volutpat neglegentur. Prodesset gloriatur tincidunt pri ea, qui aeque tempor accusam ut.</p>
+
+</article>
 
 <div id="waveform"></div>
 <div class="controls">
