--- a/index.html
+++ b/index.html
@@ -19,32 +19,76 @@
 </div>
 
 <article>
-    <p>Lorem ipsum dolor sit amet, id nam erat autem illud, id nusquam dissentias pro. Quo id aliquid epicuri. Ex ferri harum partem pro. Eirmod lucilius dissentiet ut sed, sea persecuti pertinacia ne. Latine eligendi at sit. No mutat rebum mei, unum facete indoctum eos ex. Ea nec singulis repudiandae.</p>
+  <p>
+  In 1971, Gil Scott-Heron’s second album, Pieces of a Man, featured the song “Home Is Where the Hatred Is.” Written from the point of view of an addict, Scott-Heron sings,
+  “Home is where the needle marks / Try to heal my broken heart / And it might not be such a bad idea if I never went home again.”
+  In the wake of Daniel Patrick Moynihan’s 1965 report, The Negro Family, the idea of the home as a location of black pathology emerged as a widely accepted, albeit always contested,
+  truth in U.S. society, especially among policy experts.
+  The report filled the national imagination with images of black communities consisting of absent fathers,
+  overbearing matriarchs, and untamed youth. Using social science methods to paint a seemingly objective portrait of African American home life, the Moynihan Report informed
+  popular conceptions of black life that helped lead to the devaluing of non-patriarchal family structures and the gradual gutting of social safety nets over the last 30 years of the twentieth century.
+  </p>
 
-<p>In feugiat inciderint mediocritatem pri. Has ad meis indoctum persequeris. At alia malis ancillae duo. Cum ei dignissim persequeris, id illum similique incorrupte quo, ex option cotidieque vel. Cu vim sale delicatissimi.</p>
+  <p>
+  Yet, for Scott-Heron, the culpability lay less with black individuals and more with the systematic destruction of the black home at the hands of the federal government,
+  specifically the military-industrial complex. Songs like “The Revolution Will Not Be Televised,” “Whitey on the Moon,” “H20 Gate Blues,”
+  and “South Carolina (Barnwell)” all connect the economic and environmental degradation experienced in black homes to defense expenditures that kept the U.S. prepared for perpetual war.
+  Importantly, the link between defense spending and African American oppression implicates the U.S. South, a region that disproportionately relied on the Pentagon for its share of federal largesse. By examining the brokenness and potential for redemption that Scott-Heron found in black domestic spaces, we hear from the poet laureate of policy analysis who understood and named the rhizomatic connections between the building of the U.S.’s nationalistic defense strategies, the South’s political ties to the Pentagon, and the destruction of African American domestic spaces.
+  </p>
+  <p>
+  Music critics, biographers, and historians have wrestled with the legacy of Gil Scott-Heron, debating his role as the “godfather of rap,”
+  his late-life reputation as a drug addict, and the political energy of his songs.  But only historian Claudrena Harold has recognized Scott-Heron as a southerner. Writing shortly after his death in 2011, Harold cited songs like “95 South” and “South Carolina (Barnwell)” to comment on the poet-musician’s “indebtedness to the South and his deep love for its people, its culture, and its political struggles.”  Yet Scott-Heron’s posthumously published memoir, The Last Holiday, pushed this implicit, textual relationship between his art and the South to the forefront, with an emphasis on how the region influenced his conception of home. When Scott-Heron spoke of home, he meant the South, and he meant, specifically, Jackson, Tennessee. Although born in Chicago in 1949, Scott-Heron moved to Jackson, his mother’s hometown about 90 miles northeast of Memphis as a toddler, following his parents’ divorce. As he noted in his memoir, “No Matter where I went¬¬¬––to Chicago, New York, Alabama, Memphis, or even Puerto Rico in the summer of 1960––I always knew I’d be coming back home to Jackson . . . It was where I began to write, learned to play piano, and where I began to write songs.”  In Jackson, he lived with his maternal grandmother, Lily Scott, whose fierce intelligence and willingness to publicly criticize the rigors of Jim Crow society shaped his consciousness.
+  </p>
 
-<p>His et minim decore postulant. Eam te aperiam vulputate, an facer maiorum ponderum usu, ad adhuc ridens mea. In quo choro iriure lobortis. Vix erant doctus constituto ne. Eu usu stet abhorreant, at vim sint vitae dictas. Vim vidisse fabellas gloriatur ut.</p>
+  <p>
+  Scott-Heron acknowledged the seemingly stereotypical arrangement of his upbringing in his poem “Coming from a Broken Home.”
+  In the first verse, he described how “women folk raised me and I was full grown / before I knew I came from a broken home . . . Sent to live with my Grandma down south / [wonder why they call it down if the world is round].” The domestic scene he portrayed here reflected his self-awareness regarding the alleged pathology of black domesticity “where my uncle was leavin’ / and my grandfather had just left for heaven, they said, / and as every ologist would certainly note / I had NO STRONG MALE FIGURE! RIGHT?”   Scott-Heron mocks every “ologist” who might echo Moynihan and deem his upbringing insufficient. Instead, he glorifies the strong women who raised him and taught him to challenge racial inequality. After his grandmother died, his mother returned to Jackson to raise him, encouraging him to volunteer with two other students to integrate the city’s High School, which he did in 1962. Yet, that same year, Scott-Heron’s time in Jackson came to an end when he encountered the environmental racism of the federal government for the first time. The infrastructure of Cold War armament and consumerism literally destroyed Scott-Heron’s home when his grandmother’s house, along with much of Jackson’s middle-class African American neighborhood, fell in the path of construction for Interstate 40.
+  In doing so, the government demolished the one space of domestic peace and love Scott-Heron had known in his young life. The mother and son then moved to New York City, where the teenaged Scott-Heron began soaking up new sounds, from Richie Havens to the Last Poets, and new politics, from Amiri Baraka to Stokely Carmichael. He finished high school on scholarship at the exclusive Fieldston Prep School in the Bronx and attended Lincoln University outside of Philadelphia, where he met Brian Jackson, his musical partner during the next decade of astounding artistic output.
+  </p>
+  <p>
+  The interstate highway system that destroyed Scott-Heron’s Tennessee home offered only one manifestation of the enormous impact the federal government had on the South’s environment and economics that started in earnest during World War II. In 1940, the South represented 27 percent of the nation’s population, but only 17 percent of its laborers worked in manufacturing industries. During the war, defense contractors like the McDonnell Aircraft Corporation, Bell Aircraft Corporation, and General Motors established factories in Louisiana, Georgia, Alabama, and Texas, taking advantage of the region’s underemployed workforce, its general skepticism of organized labor, and lower wages.  This wartime economic development depended heavily on the disproportionate congressional power wielded by southern politicians like Georgia’s Richard B. Russell and Carl Vinson and South Carolina’s Mendel Rivers, all of whom served on the Armed Services Committee. When not channeling “private” industry into the South, these politicians encouraged economic development through the expansion of military installations, a process that would only intensify after the war.  Indeed, black soldiers from around the country would experience southern racism on these installations before deployment to Korea and Vietnam, where they would die in disproportionate numbers. From Cobb County, Georgia to Orange County, California, the military-industrial complex created jobs, infrastructure, academic institutions, and suburban residential spaces, meaning that the federal state wielded more influence in shaping the Sunbelt economy than any other single factor in the years following the Second World War.
+  </p>
 
-<p>Ut pri diam nemore vivendo, has mazim consul cu. Ius amet simul te. Docendi blandit disputando pri eu, vis possim regione ea, his ne elitr similique intellegebat. Duo eros iriure nusquam cu, tale dolores fabellas sed ea. Vix alterum interesset ea, modo facete duo ex.</p>
+  <p>
+  Scott-Heron made his recording debut in 1970 with the spoken word album Small Talk at 125th and Lenox and wasted no time in connecting the dots between government defense spending and the divestment of African American communities.
+  The lead-off track, and perhaps his most well-known composition, “The Revolution Will Not Be Televised,” eviscerates the nation’s political leadership, including a strategic hit on South Carolina congressman and “patriarch of the armed forces,” Mendel Rivers. “The revolution will not show you pictures of / Nixon blowing a bugle and leading a charge by / John Mitchell, General Abramson, and Mendel Rivers / to eat hog maws confiscated from a Harlem sanctuary / The revolution will not be televised.” He also uses this track to take on the imaginary South of popular culture with lines like “Green Acres, Beverly Hillbillies, and Hooterville Junction / will no longer be so God damned relevant . . . because black people will be in the streets looking for / A Brighter Day. / The revolution will not be televised.”  With three quick television references, Scott-Heron takes his verbal wrecking ball to the idyllic southern/midwestern mash up countryside of Hooterville Junction and the natural resources jackpot experienced by the Clampetts. No more could pure white buffoonery exist in bucolic peace because a revolution had begun in America’s streets.
+  The same album featured “Whitey on the Moon,” one of Scott-Heron’s most overt critiques of government economic priorities and their relationship to the degradation of African American homes. “A rat done bit my sister Nell,” he begins “(with Whitey on the moon) / Her face and arms began to swell. / (and Whitey’s on the moon) / I can’t pay no doctor bill / (but Whitey’s on the moon) / Ten years from now I’ll be paying still. / (while Whitey’s on the moon).”  He goes on to describe the rising rent demanded by predatory landlords, the ever-present junkies in his neighborhood, and the punitive tax laws that forced him to pay more than his fair share.  Meanwhile, from Cape Canaveral, Florida to Huntsville, Alabama to Houston, Texas, the development of the space program had enriched southern communities through infrastructure, R&D incentives in higher education, and manufacturing jobs.
+  </p>
+  <p>
+  When Scott-Heron told of his fictional sister’s rat bite, he possibly relayed the actual experience of the people his mother encountered in her job at the New York Public Housing Authority or the pervasive news stories concerning infestations in the city’s low-rent housing. And giving some credence to the Scott-Heron’s reluctant role as the “godfather of rap,” the line held a clear influence on Grandmaster Flash and the Furious Five’s “The Message” - “Rat’s in the front room, roach’s in the back / Junkies in the alley with a baseball bat.”  But when Scott-Heron deployed this image of infestation, he connected the poverty experienced by black America to the federal expenditures that kept the nation in the Cold War arms and space races. A home in the poorest spaces of black America could not match the happy go-lucky white imaginary of Hooterville Junction, not as long as a government invested in white supremacy spent so much of its money getting to the moon.
+  </p>
 
-<p>Usu an dolor comprehensam. At pro primis nominati, qui officiis repudiare posidonium cu, eu postea veritus pro. Cu usu lorem possit petentium, dolorem vulputate nec ne, eos autem malorum cu. Mazim suscipiantur necessitatibus nec no, commodo noluisse id mel. Id mea habeo epicurei, ut ius adhuc mundi mnesarchum. Ne vel nihil homero everti, aperiam definitionem ut duo, his te tota volutpat neglegentur. Prodesset gloriatur tincidunt pri ea, qui aeque tempor accusam ut.</p>
+  <p>
+  This focus on defense spending continued on Scott-Heron and Jackson’s 1975 release, South Africa to South Carolina. As the title suggests, Scott-Heron made pan-African connections between the struggle against apartheid in Johannesburg and the ongoing fight for racial equality in the US. And, once again, he connected environmental racism and the military-industrial complex, this time on the track, “South Carolina (Barnwell).”
+  </p>
 
-    <p>Lorem ipsum dolor sit amet, id nam erat autem illud, id nusquam dissentias pro. Quo id aliquid epicuri. Ex ferri harum partem pro. Eirmod lucilius dissentiet ut sed, sea persecuti pertinacia ne. Latine eligendi at sit. No mutat rebum mei, unum facete indoctum eos ex. Ea nec singulis repudiandae.</p>
+  <div id="waveform"></div>
+  <div class="controls">
+      <button id="playBtn" class="btn btn-primary">Play / Pause</button>
+      <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
+  </div>
 
-<p>In feugiat inciderint mediocritatem pri. Has ad meis indoctum persequeris. At alia malis ancillae duo. Cum ei dignissim persequeris, id illum similique incorrupte quo, ex option cotidieque vel. Cu vim sale delicatissimi.</p>
+  <script src="jukebox.js"></script>
 
-<p>His et minim decore postulant. Eam te aperiam vulputate, an facer maiorum ponderum usu, ad adhuc ridens mea. In quo choro iriure lobortis. Vix erant doctus constituto ne. Eu usu stet abhorreant, at vim sint vitae dictas. Vim vidisse fabellas gloriatur ut.</p>
+  <p>
+  I heard they’re building a factory down in South Carolina<br>
+  With a death potential that’s uncontrolled by government designers<br>
+  That would house atomic waste and be a constant reminder<br>
+  That they got a great big time bomb tickin’ in South Carolina<br>
+  </p>
 
-<p>Ut pri diam nemore vivendo, has mazim consul cu. Ius amet simul te. Docendi blandit disputando pri eu, vis possim regione ea, his ne elitr similique intellegebat. Duo eros iriure nusquam cu, tale dolores fabellas sed ea. Vix alterum interesset ea, modo facete duo ex.</p>
+  <p>
+  Said whatever happened to the protests and the rage?<br>
+  Whatever happened to the voices of the sane?<br>
+  Whatever happened to the people who gave a damn?<br>
+  Did that just apply to dyin’ in the jungles of Viet Nam?<br>
+  </p>
 
-<p>Usu an dolor comprehensam. At pro primis nominati, qui officiis repudiare posidonium cu, eu postea veritus pro. Cu usu lorem possit petentium, dolorem vulputate nec ne, eos autem malorum cu. Mazim suscipiantur necessitatibus nec no, commodo noluisse id mel. Id mea habeo epicurei, ut ius adhuc mundi mnesarchum. Ne vel nihil homero everti, aperiam definitionem ut duo, his te tota volutpat neglegentur. Prodesset gloriatur tincidunt pri ea, qui aeque tempor accusam ut.</p>
+  <p>
+  In the early 1950s, the Atomic Energy Commission (AEC) began construction on the Savannah River Plant (SRP), a three hundred square mile facility spread across 3 counties (30% of Barnwell County) that housed five nuclear reactors, making it the largest federal project in history. While technically owned by the AEC, the Du Pont Corporation actually conducted the day-to-day operations at the SRP, manufacturing “plutonium, tritium, deuterium, and heavy water for the hydrogen bomb.”  If this was not enough to warrant concern, the SRP opened a 235-acre, unlined nuclear waste dump on the property in 1971. Environmental scientists first detected leakage from this dump in 1978, a problem that has continued ever since proven by the constant presence of tritium in the Savannah River, a source of drinking water for communities from Augusta, Georgia to Hilton Head, South Carolina.  When Scott-Heron drew attention to the situation in 1975, he aligned himself with the growing environmental movement and landed a spot in the famed “No Nukes” concert at Madison Square Garden in 1979. Yet, unlike many of the other artists involved with the Musicians United for Safe Energy Collective, Scott-Heron refocused attention to the South and, in doing so, implicated the region’s political and economic power structures in the environmental degradation of its communities.
+  </p>
 
+  <p>
+  Juxtaposing the achievements of the space program, defense contractor profitability, and nuclear energy with the poverty and pollution experienced by African Americans, Scott-Heron implicitly and explicitly linked the South’s economic reliance on military spending to the environmental racism experienced in African American communities. On his last album from 2010, released just a few months before his death, Scott-Heron recorded a tune called “New York City is Killing Me.” In it he sings, “The doctor don’t know that New York is killing me. Bunch of doctors come around, they don’t know that New York is killing me. Yeah, well, I need to go home and take it slow in Jackson, Tennessee…. Let me tell you that city livin’ ain’t all it’s cracked up to be, Yeah see I need to go and slow down in Jackson, Tennessee.” Scott-Heron would never make it back to Jackson. That place and that time were gone, paved over along I-40, an exit ramp between Nashville and Memphis. What’s clear is that wherever he went Jackson, Tennessee; New York City; Washington, D.C.; or Barnwell County, South Carolina; the state was already there, and it delivered toxicity of all kinds to black homes around the nation with the full, legal authority of the federal government.
+  </p>
 </article>
-
-<div id="waveform"></div>
-<div class="controls">
-    <button id="playBtn" class="btn btn-primary">Play / Pause</button>
-    <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
-</div>
-
-<script src="jukebox.js"></script>
