--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   </p>
   <div id="waveform-1"></div>
   <div class="controls">
-      <button id="playBtn" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
+      <button id="playBtn1" class="btn btn-primary">Play / Pause</button>
+      <button id="toggleMuteBtn1" class="btn btn-primary">Toggle Mute</button>
   </div>
 
   <script src="jukebox.js"></script>
@@ -66,8 +66,8 @@
   </p>
   <div id="waveform-2"></div>
   <div class="controls">
-      <button id="playBtn" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
+      <button id="playBtn2" class="btn btn-primary">Play / Pause</button>
+      <button id="toggleMuteBtn2" class="btn btn-primary">Toggle Mute</button>
   </div>
 
   <script src="jukebox.js"></script>
@@ -78,8 +78,8 @@
 
   <div id="waveform-3"></div>
   <div class="controls">
-      <button id="playBtn" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn" class="btn btn-primary">Toggle Mute</button>
+      <button id="playBtn3" class="btn btn-primary">Play / Pause</button>
+      <button id="toggleMuteBtn3" class="btn btn-primary">Toggle Mute</button>
   </div>
 
   <script src="jukebox.js"></script>
