Updates to wavesurfer 2.0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title> JUKEBOX TRIAL 1 </title>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.4.0/wavesurfer.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/2.0.0-beta01/wavesurfer.min.js"></script>
 <script src='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.js'></script>
 <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
 <script src='//api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
