Changes font and centers lyrics.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <meta charset="utf-8">
 <title> JUKEBOX TRIAL 1 </title>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/2.0.0-beta01/wavesurfer.min.js"></script>
 <script src='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.js'></script>
 <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
@@ -52,14 +52,16 @@
   <p>
   Scott-Heron made his recording debut in 1970 with the spoken word album Small Talk at 125th and Lenox and wasted no time in connecting the dots between government defense spending and the divestment of African American communities.
   The lead-off track, and perhaps his most well-known composition, “The Revolution Will Not Be Televised,” eviscerates the nation’s political leadership, including a strategic hit on South Carolina congressman and “patriarch of the armed forces,” Mendel Rivers. “The revolution will not show you pictures of / Nixon blowing a bugle and leading a charge by / John Mitchell, General Abramson, and Mendel Rivers / to eat hog maws confiscated from a Harlem sanctuary / The revolution will not be televised.” He also uses this track to take on the imaginary South of popular culture with lines like “Green Acres, Beverly Hillbillies, and Hooterville Junction / will no longer be so God damned relevant . . . because black people will be in the streets looking for / A Brighter Day. / The revolution will not be televised.”  With three quick television references, Scott-Heron takes his verbal wrecking ball to the idyllic southern/midwestern mash up countryside of Hooterville Junction and the natural resources jackpot experienced by the Clampetts. No more could pure white buffoonery exist in bucolic peace because a revolution had begun in America’s streets.
-  The same album featured “Whitey on the Moon,” one of Scott-Heron’s most overt critiques of government economic priorities and their relationship to the degradation of African American homes. “A rat done bit my sister Nell,” he begins “(with Whitey on the moon) / Her face and arms began to swell. / (and Whitey’s on the moon) / I can’t pay no doctor bill / (but Whitey’s on the moon) / Ten years from now I’ll be paying still. / (while Whitey’s on the moon).”  He goes on to describe the rising rent demanded by predatory landlords, the ever-present junkies in his neighborhood, and the punitive tax laws that forced him to pay more than his fair share.  Meanwhile, from Cape Canaveral, Florida to Huntsville, Alabama to Houston, Texas, the development of the space program had enriched southern communities through infrastructure, R&D incentives in higher education, and manufacturing jobs.
+
   </p>
   <div id="waveform-1"></div>
   <div class="controls">
       <button id="playBtn1" class="btn btn-primary">Play / Pause</button>
       <button id="toggleMuteBtn1" class="btn btn-primary">Toggle Mute</button>
   </div>
-
+  <p>
+    The same album featured “Whitey on the Moon,” one of Scott-Heron’s most overt critiques of government economic priorities and their relationship to the degradation of African American homes. “A rat done bit my sister Nell,” he begins “(with Whitey on the moon) / Her face and arms began to swell. / (and Whitey’s on the moon) / I can’t pay no doctor bill / (but Whitey’s on the moon) / Ten years from now I’ll be paying still. / (while Whitey’s on the moon).”  He goes on to describe the rising rent demanded by predatory landlords, the ever-present junkies in his neighborhood, and the punitive tax laws that forced him to pay more than his fair share.  Meanwhile, from Cape Canaveral, Florida to Huntsville, Alabama to Houston, Texas, the development of the space program had enriched southern communities through infrastructure, R&D incentives in higher education, and manufacturing jobs.
+  </p>
 
   <p>
   When Scott-Heron told of his fictional sister’s rat bite, he possibly relayed the actual experience of the people his mother encountered in her job at the New York Public Housing Authority or the pervasive news stories concerning infestations in the city’s low-rent housing. And giving some credence to the Scott-Heron’s reluctant role as the “godfather of rap,” the line held a clear influence on Grandmaster Flash and the Furious Five’s “The Message” - “Rat’s in the front room, roach’s in the back / Junkies in the alley with a baseball bat.”  But when Scott-Heron deployed this image of infestation, he connected the poverty experienced by black America to the federal expenditures that kept the nation in the Cold War arms and space races. A home in the poorest spaces of black America could not match the happy go-lucky white imaginary of Hooterville Junction, not as long as a government invested in white supremacy spent so much of its money getting to the moon.
@@ -83,7 +85,7 @@
   </div>
 
   <script src="jukebox.js"></script>
-
+  <center>
   <p>
   I heard they’re building a factory down in South Carolina<br>
   With a death potential that’s uncontrolled by government designers<br>
@@ -96,8 +98,8 @@
   Whatever happened to the voices of the sane?<br>
   Whatever happened to the people who gave a damn?<br>
   Did that just apply to dyin’ in the jungles of Viet Nam?<br>
-  </p>
-
+</p>
+</center>
   <p>
   In the early 1950s, the Atomic Energy Commission (AEC) began construction on the Savannah River Plant (SRP), a three hundred square mile facility spread across 3 counties (30% of Barnwell County) that housed five nuclear reactors, making it the largest federal project in history. While technically owned by the AEC, the Du Pont Corporation actually conducted the day-to-day operations at the SRP, manufacturing “plutonium, tritium, deuterium, and heavy water for the hydrogen bomb.”  If this was not enough to warrant concern, the SRP opened a 235-acre, unlined nuclear waste dump on the property in 1971. Environmental scientists first detected leakage from this dump in 1978, a problem that has continued ever since proven by the constant presence of tritium in the Savannah River, a source of drinking water for communities from Augusta, Georgia to Hilton Head, South Carolina.  When Scott-Heron drew attention to the situation in 1975, he aligned himself with the growing environmental movement and landed a spot in the famed “No Nukes” concert at Madison Square Garden in 1979. Yet, unlike many of the other artists involved with the Musicians United for Safe Energy Collective, Scott-Heron refocused attention to the South and, in doing so, implicated the region’s political and economic power structures in the environmental degradation of its communities.
   </p>
