--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src='//api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 <link href='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.css' rel='stylesheet' />
 <link href="wavesurferstyle.css" rel="stylesheet">
-
+<script src="tracks.js"></script>
 <header role="banner">
     Jukebox Trial
 </header>
@@ -80,6 +80,7 @@
 
   <div id="waveform-3"></div>
   <div class="controls">
+      <span id="time3"></span>
       <button id="playBtn3" class="btn btn-primary">Play / Pause</button>
       <button id="toggleMuteBtn3 " class="btn btn-primary">Toggle Mute</button>
   </div>
