--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <link href='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.css' rel='stylesheet' />
 <link href="wavesurferstyle.css" rel="stylesheet">
 <script src="tracks.js"></script>
-<header role="banner">
+<!--<header role="banner">
     Jukebox Trial
-</header>
+</header>-->
 
 <div id="map">
   <div id="info"></div>
 </div>
+
+<h1>JUKEBOX TRIAL</h1>
 
 <article>
   <p>
