Changes title, edits text, and alters mute button.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="info"></div>
 </div>
 
-<h1>JUKEBOX TRIAL</h1>
+<h1>Home Is Where the Hatred Is:<br><br> Gil Scott-Heron’s Toxic Domestic Spaces</h1>
 
 <article>
   <p>
@@ -41,7 +41,7 @@
   Music critics, biographers, and historians have wrestled with the legacy of Gil Scott-Heron, debating his role as the “godfather of rap,”
   his late-life reputation as a drug addict, and the political energy of his songs.  But only historian Claudrena Harold has recognized Scott-Heron as a southerner. Writing shortly after his death in 2011, Harold cited songs like “95 South” and “South Carolina (Barnwell)” to comment on the poet-musician’s “indebtedness to the South and his deep love for its people, its culture, and its political struggles.”  Yet Scott-Heron’s posthumously published memoir, The Last Holiday, pushed this implicit, textual relationship between his art and the South to the forefront, with an emphasis on how the region influenced his conception of home. When Scott-Heron spoke of home, he meant the South, and he meant, specifically, Jackson, Tennessee. Although born in Chicago in 1949, Scott-Heron moved to Jackson, his mother’s hometown about 90 miles northeast of Memphis as a toddler, following his parents’ divorce. As he noted in his memoir, “No Matter where I went¬¬¬––to Chicago, New York, Alabama, Memphis, or even Puerto Rico in the summer of 1960––I always knew I’d be coming back home to Jackson . . . It was where I began to write, learned to play piano, and where I began to write songs.”  In Jackson, he lived with his maternal grandmother, Lily Scott, whose fierce intelligence and willingness to publicly criticize the rigors of Jim Crow society shaped his consciousness.
   </p>
-
+<!--
   <p>
   Scott-Heron acknowledged the seemingly stereotypical arrangement of his upbringing in his poem “Coming from a Broken Home.”
   In the first verse, he described how “women folk raised me and I was full grown / before I knew I came from a broken home . . . Sent to live with my Grandma down south / [wonder why they call it down if the world is round].” The domestic scene he portrayed here reflected his self-awareness regarding the alleged pathology of black domesticity “where my uncle was leavin’ / and my grandfather had just left for heaven, they said, / and as every ologist would certainly note / I had NO STRONG MALE FIGURE! RIGHT?”   Scott-Heron mocks every “ologist” who might echo Moynihan and deem his upbringing insufficient. Instead, he glorifies the strong women who raised him and taught him to challenge racial inequality. After his grandmother died, his mother returned to Jackson to raise him, encouraging him to volunteer with two other students to integrate the city’s High School, which he did in 1962. Yet, that same year, Scott-Heron’s time in Jackson came to an end when he encountered the environmental racism of the federal government for the first time. The infrastructure of Cold War armament and consumerism literally destroyed Scott-Heron’s home when his grandmother’s house, along with much of Jackson’s middle-class African American neighborhood, fell in the path of construction for Interstate 40.
@@ -50,7 +50,7 @@
   <p>
   The interstate highway system that destroyed Scott-Heron’s Tennessee home offered only one manifestation of the enormous impact the federal government had on the South’s environment and economics that started in earnest during World War II. In 1940, the South represented 27 percent of the nation’s population, but only 17 percent of its laborers worked in manufacturing industries. During the war, defense contractors like the McDonnell Aircraft Corporation, Bell Aircraft Corporation, and General Motors established factories in Louisiana, Georgia, Alabama, and Texas, taking advantage of the region’s underemployed workforce, its general skepticism of organized labor, and lower wages.  This wartime economic development depended heavily on the disproportionate congressional power wielded by southern politicians like Georgia’s Richard B. Russell and Carl Vinson and South Carolina’s Mendel Rivers, all of whom served on the Armed Services Committee. When not channeling “private” industry into the South, these politicians encouraged economic development through the expansion of military installations, a process that would only intensify after the war.  Indeed, black soldiers from around the country would experience southern racism on these installations before deployment to Korea and Vietnam, where they would die in disproportionate numbers. From Cobb County, Georgia to Orange County, California, the military-industrial complex created jobs, infrastructure, academic institutions, and suburban residential spaces, meaning that the federal state wielded more influence in shaping the Sunbelt economy than any other single factor in the years following the Second World War.
   </p>
-
+-->
   <p>
   Scott-Heron made his recording debut in 1970 with the spoken word album Small Talk at 125th and Lenox and wasted no time in connecting the dots between government defense spending and the divestment of African American communities.
   The lead-off track, and perhaps his most well-known composition, “The Revolution Will Not Be Televised,” eviscerates the nation’s political leadership, including a strategic hit on South Carolina congressman and “patriarch of the armed forces,” Mendel Rivers. “The revolution will not show you pictures of / Nixon blowing a bugle and leading a charge by / John Mitchell, General Abramson, and Mendel Rivers / to eat hog maws confiscated from a Harlem sanctuary / The revolution will not be televised.” He also uses this track to take on the imaginary South of popular culture with lines like “Green Acres, Beverly Hillbillies, and Hooterville Junction / will no longer be so God damned relevant . . . because black people will be in the streets looking for / A Brighter Day. / The revolution will not be televised.”  With three quick television references, Scott-Heron takes his verbal wrecking ball to the idyllic southern/midwestern mash up countryside of Hooterville Junction and the natural resources jackpot experienced by the Clampetts. No more could pure white buffoonery exist in bucolic peace because a revolution had begun in America’s streets.
@@ -59,7 +59,7 @@
   <div id="waveform-1"></div>
   <div class="controls">
       <button id="playBtn1" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn1" class="btn btn-primary">Toggle Mute</button>
+      <button id="toggleMuteBtn1" class="btn btn-primary"> Mute</button>
   </div>
   <p>
     The same album featured “Whitey on the Moon,” one of Scott-Heron’s most overt critiques of government economic priorities and their relationship to the degradation of African American homes. “A rat done bit my sister Nell,” he begins “(with Whitey on the moon) / Her face and arms began to swell. / (and Whitey’s on the moon) / I can’t pay no doctor bill / (but Whitey’s on the moon) / Ten years from now I’ll be paying still. / (while Whitey’s on the moon).”  He goes on to describe the rising rent demanded by predatory landlords, the ever-present junkies in his neighborhood, and the punitive tax laws that forced him to pay more than his fair share.  Meanwhile, from Cape Canaveral, Florida to Huntsville, Alabama to Houston, Texas, the development of the space program had enriched southern communities through infrastructure, R&D incentives in higher education, and manufacturing jobs.
@@ -71,7 +71,7 @@
   <div id="waveform-2"></div>
   <div class="controls">
       <button id="playBtn2" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn2" class="btn btn-primary">Toggle Mute</button>
+      <button id="toggleMuteBtn2" class="btn btn-primary"> Mute</button>
   </div>
 
 
@@ -83,11 +83,11 @@
   <div id="waveform-3"></div>
   <div class="controls">
       <button id="playBtn3" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn3 " class="btn btn-primary">Toggle Mute</button>
+      <button id="toggleMuteBtn3 " class="btn btn-primary"> Mute</button>
   </div>
 
   <center>
-  <p>
+<!--  <p>
   I heard they’re building a factory down in South Carolina<br>
   With a death potential that’s uncontrolled by government designers<br>
   That would house atomic waste and be a constant reminder<br>
@@ -100,7 +100,7 @@
   Whatever happened to the people who gave a damn?<br>
   Did that just apply to dyin’ in the jungles of Viet Nam?<br>
 </p>
-</center>
+</center>-->
   <p>
   In the early 1950s, the Atomic Energy Commission (AEC) began construction on the Savannah River Plant (SRP), a three hundred square mile facility spread across 3 counties (30% of Barnwell County) that housed five nuclear reactors, making it the largest federal project in history. While technically owned by the AEC, the Du Pont Corporation actually conducted the day-to-day operations at the SRP, manufacturing “plutonium, tritium, deuterium, and heavy water for the hydrogen bomb.”  If this was not enough to warrant concern, the SRP opened a 235-acre, unlined nuclear waste dump on the property in 1971. Environmental scientists first detected leakage from this dump in 1978, a problem that has continued ever since proven by the constant presence of tritium in the Savannah River, a source of drinking water for communities from Augusta, Georgia to Hilton Head, South Carolina.  When Scott-Heron drew attention to the situation in 1975, he aligned himself with the growing environmental movement and landed a spot in the famed “No Nukes” concert at Madison Square Garden in 1979. Yet, unlike many of the other artists involved with the Musicians United for Safe Energy Collective, Scott-Heron refocused attention to the South and, in doing so, implicated the region’s political and economic power structures in the environmental degradation of its communities.
   </p>
