--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
-<!DOCTYPE HTML>
+---
+layout: exhibit
+title: Home Is Where the Hatred Is
+subtitle: Gil Scott-Heron’s Toxic Domestic Spaces
+data: gil-scott-heron
+---
 
-<meta charset="utf-8">
-<title> JUKEBOX TRIAL 1 </title>
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/2.0.0-beta01/wavesurfer.min.js"></script>
-<script src='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.js'></script>
-<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
-<script src='//api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
-<link href='//api.mapbox.com/mapbox.js/v3.1.0/mapbox.css' rel='stylesheet' />
-<link href="wavesurferstyle.css" rel="stylesheet">
-<script src="tracks.js"></script>
-<!--<header role="banner">
-    Jukebox Trial
-</header>-->
-
-<div id="map">
-  <div id="info"></div>
-</div>
-
-<article>
-<h1>Home Is Where the Hatred Is:<br><br> Gil Scott-Heron’s Toxic Domestic Spaces</h1>
-  <p>
+<p>
   In 1971, Gil Scott-Heron’s second album, Pieces of a Man, featured the song “Home Is Where the Hatred Is.” Written from the point of view of an addict, Scott-Heron sings,
   “Home is where the needle marks / Try to heal my broken heart / And it might not be such a bad idea if I never went home again.”
   In the wake of Daniel Patrick Moynihan’s 1965 report, The Negro Family, the idea of the home as a location of black pathology emerged as a widely accepted, albeit always contested,
@@ -49,11 +34,7 @@
   The interstate highway system that destroyed Scott-Heron’s Tennessee home offered only one manifestation of the enormous impact the federal government had on the South’s environment and economics that started in earnest during World War II. In 1940, the South represented 27 percent of the nation’s population, but only 17 percent of its laborers worked in manufacturing industries. During the war, defense contractors like the McDonnell Aircraft Corporation, Bell Aircraft Corporation, and General Motors established factories in Louisiana, Georgia, Alabama, and Texas, taking advantage of the region’s underemployed workforce, its general skepticism of organized labor, and lower wages.  This wartime economic development depended heavily on the disproportionate congressional power wielded by southern politicians like Georgia’s Richard B. Russell and Carl Vinson and South Carolina’s Mendel Rivers, all of whom served on the Armed Services Committee. When not channeling “private” industry into the South, these politicians encouraged economic development through the expansion of military installations, a process that would only intensify after the war.  Indeed, black soldiers from around the country would experience southern racism on these installations before deployment to Korea and Vietnam, where they would die in disproportionate numbers. From Cobb County, Georgia to Orange County, California, the military-industrial complex created jobs, infrastructure, academic institutions, and suburban residential spaces, meaning that the federal state wielded more influence in shaping the Sunbelt economy than any other single factor in the years following the Second World War.
   </p>
 -->
-<div id="waveform-1"></div>
-<div class="controls">
-    <button id="playBtn1" class="btn btn-primary">Play / Pause</button>
-    <button id="toggleMuteBtn1" class="btn btn-primary"> Mute</button>
-</div>
+{% include wavesurfer.html track="southcarolina" %}
   <p>
   Scott-Heron made his recording debut in 1970 with the spoken word album Small Talk at 125th and Lenox and wasted no time in connecting the dots between government defense spending and the divestment of African American communities.
   The lead-off track, and perhaps his most well-known composition, “The Revolution Will Not Be Televised,” eviscerates the nation’s political leadership, including a strategic hit on South Carolina congressman and “patriarch of the armed forces,” Mendel Rivers. “The revolution will not show you pictures of / Nixon blowing a bugle and leading a charge by / John Mitchell, General Abramson, and Mendel Rivers / to eat hog maws confiscated from a Harlem sanctuary / The revolution will not be televised.” He also uses this track to take on the imaginary South of popular culture with lines like “Green Acres, Beverly Hillbillies, and Hooterville Junction / will no longer be so God damned relevant . . . because black people will be in the streets looking for / A Brighter Day. / The revolution will not be televised.”  With three quick television references, Scott-Heron takes his verbal wrecking ball to the idyllic southern/midwestern mash up countryside of Hooterville Junction and the natural resources jackpot experienced by the Clampetts. No more could pure white buffoonery exist in bucolic peace because a revolution had begun in America’s streets.
@@ -99,5 +80,3 @@
   <p>
   Juxtaposing the achievements of the space program, defense contractor profitability, and nuclear energy with the poverty and pollution experienced by African Americans, Scott-Heron implicitly and explicitly linked the South’s economic reliance on military spending to the environmental racism experienced in African American communities. On his last album from 2010, released just a few months before his death, Scott-Heron recorded a tune called “New York City is Killing Me.” In it he sings, “The doctor don’t know that New York is killing me. Bunch of doctors come around, they don’t know that New York is killing me. Yeah, well, I need to go home and take it slow in Jackson, Tennessee…. Let me tell you that city livin’ ain’t all it’s cracked up to be, Yeah see I need to go and slow down in Jackson, Tennessee.” Scott-Heron would never make it back to Jackson. That place and that time were gone, paved over along I-40, an exit ramp between Nashville and Memphis. What’s clear is that wherever he went Jackson, Tennessee; New York City; Washington, D.C.; or Barnwell County, South Carolina; the state was already there, and it delivered toxicity of all kinds to black homes around the nation with the full, legal authority of the federal government.
   </p>
-</article>
-<script src="jukebox.js"></script>
