--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ data: gil-scott-heron
   The interstate highway system that destroyed Scott-Heron’s Tennessee home offered only one manifestation of the enormous impact the federal government had on the South’s environment and economics that started in earnest during World War II. In 1940, the South represented 27 percent of the nation’s population, but only 17 percent of its laborers worked in manufacturing industries. During the war, defense contractors like the McDonnell Aircraft Corporation, Bell Aircraft Corporation, and General Motors established factories in Louisiana, Georgia, Alabama, and Texas, taking advantage of the region’s underemployed workforce, its general skepticism of organized labor, and lower wages.  This wartime economic development depended heavily on the disproportionate congressional power wielded by southern politicians like Georgia’s Richard B. Russell and Carl Vinson and South Carolina’s Mendel Rivers, all of whom served on the Armed Services Committee. When not channeling “private” industry into the South, these politicians encouraged economic development through the expansion of military installations, a process that would only intensify after the war.  Indeed, black soldiers from around the country would experience southern racism on these installations before deployment to Korea and Vietnam, where they would die in disproportionate numbers. From Cobb County, Georgia to Orange County, California, the military-industrial complex created jobs, infrastructure, academic institutions, and suburban residential spaces, meaning that the federal state wielded more influence in shaping the Sunbelt economy than any other single factor in the years following the Second World War.
   </p>
 -->
-{% include wavesurfer.html track="southcarolina" %}
+{% include wavesurfer.html track="revolution" %}
   <p>
   Scott-Heron made his recording debut in 1970 with the spoken word album Small Talk at 125th and Lenox and wasted no time in connecting the dots between government defense spending and the divestment of African American communities.
   The lead-off track, and perhaps his most well-known composition, “The Revolution Will Not Be Televised,” eviscerates the nation’s political leadership, including a strategic hit on South Carolina congressman and “patriarch of the armed forces,” Mendel Rivers. “The revolution will not show you pictures of / Nixon blowing a bugle and leading a charge by / John Mitchell, General Abramson, and Mendel Rivers / to eat hog maws confiscated from a Harlem sanctuary / The revolution will not be televised.” He also uses this track to take on the imaginary South of popular culture with lines like “Green Acres, Beverly Hillbillies, and Hooterville Junction / will no longer be so God damned relevant . . . because black people will be in the streets looking for / A Brighter Day. / The revolution will not be televised.”  With three quick television references, Scott-Heron takes his verbal wrecking ball to the idyllic southern/midwestern mash up countryside of Hooterville Junction and the natural resources jackpot experienced by the Clampetts. No more could pure white buffoonery exist in bucolic peace because a revolution had begun in America’s streets.
@@ -42,19 +42,12 @@ data: gil-scott-heron
   <p>
     The same album featured “Whitey on the Moon,” one of Scott-Heron’s most overt critiques of government economic priorities and their relationship to the degradation of African American homes. “A rat done bit my sister Nell,” he begins “(with Whitey on the moon) / Her face and arms began to swell. / (and Whitey’s on the moon) / I can’t pay no doctor bill / (but Whitey’s on the moon) / Ten years from now I’ll be paying still. / (while Whitey’s on the moon).”  He goes on to describe the rising rent demanded by predatory landlords, the ever-present junkies in his neighborhood, and the punitive tax laws that forced him to pay more than his fair share.  Meanwhile, from Cape Canaveral, Florida to Huntsville, Alabama to Houston, Texas, the development of the space program had enriched southern communities through infrastructure, R&D incentives in higher education, and manufacturing jobs.
   </p>
-  <div id="waveform-2"></div>
-  <div class="controls">
-      <button id="playBtn2" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn2" class="btn btn-primary"> Mute</button>
-  </div>
+  {% include wavesurfer.html track="whitey" %}
+
   <p>
   When Scott-Heron told of his fictional sister’s rat bite, he possibly relayed the actual experience of the people his mother encountered in her job at the New York Public Housing Authority or the pervasive news stories concerning infestations in the city’s low-rent housing. And giving some credence to the Scott-Heron’s reluctant role as the “godfather of rap,” the line held a clear influence on Grandmaster Flash and the Furious Five’s “The Message” - “Rat’s in the front room, roach’s in the back / Junkies in the alley with a baseball bat.”  But when Scott-Heron deployed this image of infestation, he connected the poverty experienced by black America to the federal expenditures that kept the nation in the Cold War arms and space races. A home in the poorest spaces of black America could not match the happy go-lucky white imaginary of Hooterville Junction, not as long as a government invested in white supremacy spent so much of its money getting to the moon.
   </p>
-  <div id="waveform-3"></div>
-  <div class="controls">
-      <button id="playBtn3" class="btn btn-primary">Play / Pause</button>
-      <button id="toggleMuteBtn3 " class="btn btn-primary"> Mute</button>
-  </div>
+  {% include wavesurfer.html track="southcarolina" %}
   <p>
   This focus on defense spending continued on Scott-Heron and Jackson’s 1975 release, South Africa to South Carolina. As the title suggests, Scott-Heron made pan-African connections between the struggle against apartheid in Johannesburg and the ongoing fight for racial equality in the US. And, once again, he connected environmental racism and the military-industrial complex, this time on the track, “South Carolina (Barnwell).”
   </p>
